# Melody-Api

./: LICENSE  README.md  example.env  main.py  pinned.txt  pyproject.toml  requirements.txt  table.sql
.github/: FUNDING.yml
.github/workflows/: auto-poetry.yml
