[tool.poetry]
name = "melody-api"
version = "0.1.0"
description = "Api for Connie Melody Skye"
authors = ["JDJG <jdjgbot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
asyncpg = ">=0.29.0"
fastapi = ">=0.112.0"
python-dotenv = ">=1.0.1"
uvicorn = ">=0.30.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
